Release 17.2.4 Cherry-picked changesets:   ed34ca2 Sergey Zvyagin - Add new css classes with base colors to generic themes (#2223)   5c1b85c Sergey Zvyagin - Fix numerous small issues in the new color schemes (#2224)   86137d3 Sergey Zvyagin - Fix RangeSelector scale ticks in contrast theme (#2227)   0ad956f Yana Yarovaya - Fix jQuery 1&2 slider tests in Chrome 62 (#2238)

--- a/styles/widgets/base/scheduler.less
+++ b/styles/widgets/base/scheduler.less
@@ -1908,6 +1908,7 @@
     color: @SCHEDULER_APPOINTMENT_TEXT_COLOR;
 
     &.dx-button,
+    &.dx-button.dx-state-hover,
     &.dx-button.dx-state-active,
     &.dx-button.dx-state-focused {
         background-color: @SCHEDULER_APPOINTMENT_BASE_COLOR;
