--- a/styles/widgets/generic/color-schemes/darkviolet/generic.darkviolet.less
+++ b/styles/widgets/generic/color-schemes/darkviolet/generic.darkviolet.less
@@ -853,7 +853,7 @@
 * @type color
 * @group overlays.toasts
 */
-@toast-color: @base-inverted-text-color;
+@toast-color: #fff;
 @toast-shadow-color: transparent;
 
 @toast-border-radius: @base-border-radius-large;
